Tweaked uwsgi settings to avoid memory leak related crashes

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,12 +2,14 @@
 module = wsgi:app
 
 master = true
-processes = 5
+processes = 4
 
 socket = /home/uwsgi/run/uwsgi.sock
 chmod-socket = 660
 vacuum = true
 enable-threads = true
 die-on-term = true
+reload-on-rss = 500
+max-requests = 500
 
 env = CLIMATEDATA_FLASK_SETTINGS=local_settings.py
