Added harakiri to uwsgi.ini

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -11,5 +11,6 @@ enable-threads = true
 die-on-term = true
 reload-on-rss = 500
 max-requests = 500
+harakiri = 300
 
 env = CLIMATEDATA_FLASK_SETTINGS=local_settings.py
