CLIM-276 Fixed path of local_settings for QA+PROD envs

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -13,4 +13,4 @@ reload-on-rss = 500
 max-requests = 500
 harakiri = 300
 
-env = CLIMATEDATA_FLASK_SETTINGS=local_settings.py
+env = CLIMATEDATA_FLASK_SETTINGS=../local_settings.py
