CLIM-370 new api call to get features unique ID from points

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-wheel
-flask
-pandas
-xarray>=0.16.0
-sentry-sdk[flask]
-netCDF4
-protobuf>=3.19.4,<4.21.0
-mapbox_vector_tile
-requests
+click
 clisops
+flask
+geopandas
+mapbox_vector_tile
+netCDF4
+pandas
+protobuf>=3.19.4,<4.21.0
+requests
+scipy
 selenium
+sentry-sdk[flask]
 validators
+wheel
+xarray>=0.16.0
