Updated uwsgi.ini for sentry-sdk compatibility

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -8,6 +8,10 @@ socket = /home/uwsgi/run/uwsgi.sock
 chmod-socket = 660
 vacuum = true
 enable-threads = true
+
+# required by sentry-sdk
+py-call-uwsgi-fork-hooks = true
+
 die-on-term = true
 reload-on-rss = 500
 max-requests = 500
